# SLAM-Wheeled-Robot

./: .gitignore  README.md
.github/workflows/: codeql.yml
docs/: DEBUGGING_LOG.md  Handbook.md
maps/: phase3_map.pgm  phase3_map.yaml  phase5_final_map.yaml
models/: dynamic_obstacle.sdf
results/: Phase-wise_Improvement.md  benchmark_rrt_20260622_112718.csv  benchmark_rrt_star_20260622_105953.csv  controller_DWA_20260623_105839.csv  controller_DWA_20260623_111035.csv  controller_DWA_v2_20260623_112732.csv  controller_MPPI_20260623_105243.csv  rugged_test_20260630_110149.csv
rrt_planner/: CMakeLists.txt  package.xml  plugins.xml
rrt_planner/config/: nav2_params_rrt_baseline.yaml
rrt_planner/include/rrt_planner/: rrt_planner.hpp
rrt_planner/scripts/: benchmark_comparison.py  plot_comparison.py
rrt_planner/src/: rrt_planner.cpp
rrt_star_planner/: CMakeLists.txt  PHASE2_README.md  README.md  package.xml  plugins.xml
rrt_star_planner/config/: nav2_params_dwa_baseline.yaml  nav2_params_full_phase3.yaml  nav2_params_live_slam.yaml  nav2_params_mppi.yaml  rrt_star_params.yaml  slam_toolbox_params.yaml
rrt_star_planner/include/rrt_star_planner/: rrt_star_planner.hpp
rrt_star_planner/launch/: slam_nav2_rrtstar.launch.py
rrt_star_planner/scripts/: benchmark_controller_comparison.py  benchmark_dynamic_replanning.py  benchmark_rrt_vs_rrtstar.py  plot_controller_comparison.py  rugged_test_phase5.py
rrt_star_planner/src/: rrt_star_planner.cpp
