<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrt_planner</name>
  <version>1.0.0</version>
  <description>Vanilla RRT global planner Nav2 plugin - baseline for RRT* comparison</description>
  <maintainer email="sasthakiran046@gmail.com">Kiran S K</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
